fixing dark mode color

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -37,11 +37,6 @@ body {
     overflow-x: hidden;
 }
 
-@media (prefers-color-scheme: light) {
-    :root {
-        --background-color: #FFF; /* Tamni mod */
-    }
-}
 a{
     text-decoration: none;
 }
